web01/k8s/blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: load-balancer-example
  name: hello-world-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: load-balancer-example
  template:
    metadata:
      labels:
        app.kubernetes.io/name: load-balancer-example
        color: blue
    spec:
      containers:
      - image: nikhil101/django-k8s:blue
        name: hello-world
        ports:
        - containerPort: 8000
