web01/k8s/pods_liveness_fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-k8s-nikhil
  labels:
    type: web
spec:
  containers:
  - name: django-k8s
    image: nikhil101/django-k8s:1.0
    livenessProbe:
      httpGet:
        path: /link/to/show/container/is/live
        port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 2 # Defaults to 1
      periodSeconds: 5 # Defaults to 10
      failureThreshold: 1 # Defaults to 3
