web01/k8s/pods_port.yml
apiVersion: v1
kind: Pod
metadata:
  name: django-k8s
  labels:
    app: web
spec:
  containers:
  - name: django-k8s
    image: nikhil101/django-k8s:1.0
    imagePullPolicy: Always
    command: ["python3", "manage.py", "runserver"]
    ports:
    - containerPort: 8000
