web01/k8s/pods_scaled.yml
apiVersion: v1
kind: Pod
metadata:
  name: django-k8s
  labels:
    type: web
spec:
  containers:
  - name: django-k8s-1
    image: nikhil101/django-k8s:1.0
  - name: django-k8s-2
    image: nikhil101/django-k8s:1.0
