web01/k8s/pods_loadbalancer_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: LoadBalancer 
  selector:
    app.kubernetes.io/name: load-balancer-example 
  ports:
  - nodePort: 30814
    port: 8000
    protocol: TCP
    targetPort: 8000
