web01/k8s/pods_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: django-k8s-svc
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
